crates/review-buddy/tests/snapshots/background__background_dashboard_afterglow-dark_100x30_no.snap
---
source: crates/review-buddy/tests/background.rs
expression: bg_histogram(&buffer)
---
Reset: 2887
Rgb(39, 34, 62): 113
