crates/review-buddy/tests/snapshots/background__background_dashboard_afterglow-dark_160x40_no.snap
---
source: crates/review-buddy/tests/background.rs
expression: bg_histogram(&buffer)
---
Reset: 6250
Rgb(39, 34, 62): 150
