crates/review-buddy/tests/snapshots/background__background_dashboard_afterglow-dark_160x40_yes.snap
---
source: crates/review-buddy/tests/background.rs
expression: bg_histogram(&buffer)
---
Rgb(15, 14, 26): 6250
Rgb(39, 34, 62): 150
