crates/review-buddy/tests/snapshots/background__background_dashboard_afterglow-light_100x30_no.snap
---
source: crates/review-buddy/tests/background.rs
expression: bg_histogram(&buffer)
---
Reset: 2887
Rgb(244, 233, 222): 113
