crates/review-buddy/tests/snapshots/background__background_dashboard_afterglow-light_160x40_theme.snap
---
source: crates/review-buddy/tests/background.rs
expression: bg_histogram(&buffer)
---
Rgb(244, 233, 222): 150
Rgb(251, 250, 246): 6250
