crates/review-buddy/tests/snapshots/background__background_dashboard_afterglow_dark_100x30_no.snap
---
source: crates/review-buddy/tests/background.rs
expression: "pinned(\"afterglow-dark\", (100, 30), BackgroundMode :: No)"
---
Reset: 2783
Rgb(39, 34, 62): 217
