crates/review-buddy/tests/snapshots/background__background_dashboard_afterglow_dark_100x30_yes.snap
---
source: crates/review-buddy/tests/background.rs
expression: "pinned(\"afterglow-dark\", (100, 30), BackgroundMode :: Yes)"
---
Rgb(15, 14, 26): 2887
Rgb(39, 34, 62): 113
