crates/review-buddy/tests/snapshots/background__background_dashboard_afterglow_dark_160x40_no.snap
---
source: crates/review-buddy/tests/background.rs
expression: "pinned(\"afterglow-dark\", (160, 40), BackgroundMode :: No)"
---
Reset: 6250
Rgb(39, 34, 62): 150
